tests/baselines/reference/symbolType14.errors.txt
tests/cases/conformance/es6/Symbols/symbolType14.ts(1,1): error TS2350: Only a void function can be called with the 'new' keyword.


==== tests/cases/conformance/es6/Symbols/symbolType14.ts (1 errors) ====
    new Symbol();
    ~~~~~~~~~~~~
!!! error TS2350: Only a void function can be called with the 'new' keyword.